--- a/templates/components/amp/products/product-view-details.html
+++ b/templates/components/amp/products/product-view-details.html
@@ -99,6 +99,9 @@
                             </li>
                         {{/each}}
                         </ul>
+                        <p class="disclaim">
+                            <em>**Product must be same style and flavor to qualify for bulk pricing.</em>
+                        </p>
                     </div>
                 </div>
             {{/if}}
