--- a/templates/components/deadsoxy/account-links.html
+++ b/templates/components/deadsoxy/account-links.html
@@ -12,23 +12,24 @@
 
 	{{!-- logged in --}}
   {{else}}
-  <li><h6>{{customer.email}}</h6></li>
-    <li><a href="{{urls.account.orders.all}}">{{lang 'account.nav.orders'}}</a>
+  	<li class="authed"><h6>{{customer.email}}</h6></li>
+    <li class="authed"><a href="{{urls.account.orders.all}}">{{lang 'account.nav.orders'}}</a>
 	</li>
-	{{#if settings.returns_enabled}}<li><a href="{{urls.account.returns}}">{{lang 'account.nav.returns'}}</a></li>
+	{{#if settings.returns_enabled}}<li class="authed"><a href="{{urls.account.returns}}">{{lang 'account.nav.returns'}}</a></li>
 	{{/if}}
-	<li><a href="{{urls.account.inbox}}">{{lang 'account.mobile_nav.messages'}}</a>
+	<li class="authed"><a href="{{urls.account.inbox}}">{{lang 'account.mobile_nav.messages'}}</a>
 	</li>
-	<li><a href="{{urls.account.addresses}}">{{lang 'account.nav.addresses'}}</span></a>
+	<li class="authed"><a href="{{urls.account.addresses}}">{{lang 'account.nav.addresses'}}</span></a>
 	</li>
-	<li><a href="{{urls.account.wishlists.all}}">{{lang 'account.mobile_nav.wishlists'}}</a>
+	{{!-- <li class="authed"><a href="{{urls.account.wishlists.all}}">{{lang 'account.mobile_nav.wishlists'}}</a>
+	</li> --}}
+	<li class="authed"><a href="{{urls.account.recent_items}}">{{lang 'account.nav.recently_viewed'}}</a>
 	</li>
-	<li><a href="{{urls.account.recent_items}}">{{lang 'account.nav.recently_viewed'}}</a>
+	<li class="authed"><a href="{{urls.account.details}}">{{lang 'account.nav.settings'}}</a>
 	</li>
-	<li><a href="{{urls.account.details}}">{{lang 'account.nav.settings'}}</a>
-	</li>
-	<hr>
-    <li><a href="{{urls.auth.logout}}">Logout</a></li>
+	<hr class="authed">
+    <li class="authed"><a href="{{urls.auth.logout}}">Logout</a></li>
+  	<li class="hide welcome"><a href="{{urls.account.inbox}}">{{customer.email}}</a></li>
 
 
   {{/unless}}
