--- a/templates/components/deadsoxy/products/product-view.html
+++ b/templates/components/deadsoxy/products/product-view.html
@@ -2,7 +2,7 @@
     {{#if customer.id}}
         <a class="Edit mono" target="_blank" href="https://store-xba1p2i5uz.mybigcommerce.com/manage/products/{{product.id}}/edit">EDIT</a>
     {{/if}}
-    <div class="columns pr">
+    <div class="columns pr m0">
         <div class="column col-left">
             {{> components/deadsoxy/products/left schema=true}}
         </div>
