--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -6,7 +6,7 @@
         {{{ head.meta_tags }}}
         {{{ head.config }}}
         {{#block "head"}} {{/block}}
-        <meta property="og:image" content="https://cdn7.bigcommerce.com/s-xba1p2i5uz/product_images/uploaded_images/hz8zp0rw.png" />
+        <meta property="og:image" content="https://cdn7.bigcommerce.com/s-kg0otnmpzw/product_images/uploaded_images/biltong-styled14.jpg?t=1538750492" />
         <link href="{{ head.favicon }}" rel="shortcut icon">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         {{{stylesheet '/assets/css/theme.css'}}}
@@ -25,6 +25,8 @@
         {{{snippet 'htmlhead'}}}
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+
     </head>
     <body class="inside">
 
@@ -40,6 +42,7 @@
         {{/if}}
         
         <div class="base pr">
+
         {{> components/deadsoxy/header }}
         {{> components/common/body }}
         {{> components/deadsoxy/footer }}
