--- a/templates/pages/contact-us.html
+++ b/templates/pages/contact-us.html
@@ -7,7 +7,7 @@ products:
 
 {{> components/common/breadcrumbs breadcrumbs=breadcrumbs}}
 
-<main class="page">
+<main class="page m0 p1em">
 
     <h1 class="page-heading">{{page.title}}</h1>
 
