--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -69,12 +69,12 @@ blog:
             {{/if}}
 
 
-            {{#if products.top_sellers}}
+            {{!-- {{#if products.top_sellers}}
                 <div class="p2em"></div>
                 <div class="container">
                     {{> components/products/new products=products.top_sellers title="Top Sellers"}}
                 </div>
-            {{/if}}
+            {{/if}} --}}
             
 
 
