--- a/templates/components/deadsoxy/products/cta.html
+++ b/templates/components/deadsoxy/products/cta.html
@@ -7,6 +7,7 @@
 		<div class="level-left">
 			<div class="hide-on-mobile">
 				{{> components/deadsoxy/products/price}}
+				{{> components/products/bulk-discount-rates}}
 			</div>
 		</div>
 		<div class="level-right">
