--- a/templates/pages/cart.html
+++ b/templates/pages/cart.html
@@ -5,6 +5,13 @@ products:
 ---
 {{#partial "page"}}
 
+<style>
+    /* no cart popout or icon in header */
+    li.icon-itm.a--cart {
+        display: none !important;
+    }
+</style>
+
 <div class="inside-header m">
     {{#if category.image}}
         <img class="lazyload" data-sizes="auto" src="{{cdn 'img/loading.svg'}}" data-src="{{getImage category.image 'zoom_size'}}">
@@ -32,7 +39,8 @@ products:
 
         {{#if cart.items.length}}
             <div class="loadingOverlay"></div>
-
+<a class="button" href="{{urls.home}}" title="{{lang 'cart.continue_shopping'}}"><i class="fas fa-arrow-left"></i> Continue
+    Shopping</a>
             <div data-cart-content>
                 {{> components/cart/content}}
             </div>
@@ -68,11 +76,11 @@ products:
         {{/if}}
 
         {{{snippet 'cart'}}}
+        <div class="p2em"></div>
     </main>
 </div>
 {{/partial}}
 {{> layout/base}}
-
 
 
 
