--- a/templates/pages/sitemap.html
+++ b/templates/pages/sitemap.html
@@ -1,11 +1,12 @@
 {{#partial "page"}}
+<div class="tac">
 <h1>{{lang 'sitemap.page_title'}}</h1>
 
 <ul>
 {{#each sitemap}}
     <li>
         <h3>{{label}}</h3>
-        <ul>
+        <ul class="m0">
             {{#each body}}
             <li>
                 <a href="{{url}}">{{label}}</a>
@@ -27,5 +28,6 @@
     </li>
 {{/each}}
 </ul>
+</div>
 {{/partial}}
 {{> layout/base}}
